# reslab-dl24-monitor

./: CHANGELOG.md  README.md  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.github/workflows/: release-please.yml  release.yml
scripts/: sync-version.cjs
src/: App.css  App.tsx  Dashboard.tsx  bindings.ts  main.jsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: atorch_ff55.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ble.rs  ble_test.rs  commands.rs  export.rs  lib.rs  logging.rs  protocol.rs  serial.rs  state.rs
src/components/: BleTestPanel.tsx  CombinedMetricChart.tsx  ControlCenter.tsx  HeroMetrics.tsx  MetricAreaChart.tsx  SecondaryMetrics.tsx  SettingsPanel.tsx  StatusHeader.tsx  TelemetryCharts.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  ru.json  uk.json
src/utils/: backendErrors.ts  chartFormat.ts  lastPort.ts  log.ts  ports.ts  settings.ts
