[package]
name = "tauri-app"
version = "0.4.0"
description = "DL24 / PX-100 electronic load monitor and controller"
authors = ["Andrew A. Chuev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.101"
parking_lot = "0.12"
serialport = "4.8.1"
specta = "2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
rust_xlsxwriter = "0.96"

# https://v2.tauri.app/concept/size/ - smaller, faster release binaries.
# panic = "abort" is intentionally omitted: disconnect_port relies on
# handle.join() observing a worker-thread panic as Err(_) to log it and keep
# the app alive; panic = "abort" would take down the whole process instead.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
